SOLR-18164: Remove use of .singleton (#4222)
Co-authored-by: copilot-swe-agent[bot] <198982749+Copilot@users.noreply.github.com>
Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>
Co-authored-by: epugh <22395+epugh@users.noreply.github.com>
(cherry picked from commit 1af33ac6997adee643f8d24e3682b4dfe19e9c4c)